--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sveltekit-static-blog-template",
+  "name": "hoasen",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -13,11 +13,7 @@
     "story:dev": "histoire dev",
     "story:build": "histoire build",
     "story:preview": "histoire preview",
-    "optimize-images": "image-transmutation --run --sourceFolder './build/images' --targetFolder './build/images' --inputFormats 'jpg' --inputFormats 'jpeg' --inputFormats 'png' --outputFormats 'png' --outputFormats 'webp' --outputFormats 'avif'",
-    "postbuild": "npm run optimize-images && svelte-sitemap --domain https://sveltekit-static-blog-template.vercel.app/",
-    "vercel-sitemap": "svelte-sitemap --out-dir .vercel/output/static --domain https://sveltekit-static-blog-template.vercel.app/",
-    "vercel-optimize-images": "image-transmutation --run --sourceFolder '.vercel/output/static/images' --targetFolder '.vercel/output/static/images' --inputFormats 'jpg' --inputFormats 'jpeg' --inputFormats 'png' --outputFormats 'png' --outputFormats 'webp' --outputFormats 'avif'",
-    "vercel-build": "npm run build && npm run vercel-sitemap && npm run vercel-optimize-images"
+    "postbuild": "svelte-sitemap --domain https://yogahoasen.com/"
   },
   "devDependencies": {
     "@histoire/plugin-svelte": "^0.16.1",
