--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "@histoire/plugin-svelte": "^0.16.1",
-    "@sveltejs/adapter-static": "^2.0.1",
+    "@sveltejs/adapter-cloudflare": "^7.2.4",
     "@sveltejs/kit": "^1.0.0",
     "dateformat": "^5.0.3",
     "eslint": "^8.28.0",
